@@ -12,6 +12,7 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -34,7 +35,7 @@ public class AiLiuyaoHistoryService {
     public List<AiLiuyaoHistoryVO> getCurrentUserHistory() {
         Long userId = UserContextHolder.getUserId();
         if (userId == null) {
-            return List.of();
+            return Collections.emptyList();
         }
         
         return getUserHistory(userId);
